# kubernetes-mcp-server

./: .gitignore  README.md  kubernetes_mcp.py  main.py  pyproject.toml
k8s/: 01-configmap-blue.yaml  02-configmap-green.yaml  04-deployment-green.yaml  deploy.sh
k8s/app/blue/: index.html
k8s/blue-green/: 03-deployment-blue.yaml  05-service.yaml  06-ingress.yaml
k8s/blue-green/app/green/: index.html
k8s/canary/: 01-configmap-v1.yaml  02-configmap-v2.yaml  03-deployment-stable.yaml  04-deployment-canary.yaml  05-service-stable.yaml  06-service-canary.yaml  07-ingress-stable.yaml  08-ingress-canary.yaml  set-weight.sh
